<resources>
    <string name="app_name">Restaurant Hygiene Checker 1453831</string>
    <string name="app_title">Hygiene Checker</string>
    <string name="app_sub_title">Protecting your gut</string>
    <string name="search_hint">Leave blank to search nearby</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="title_list">List</string>
    <string name="title_map">Map</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="viewBusinessType">Type of business</string>
    <string name="viewRating">Minimum Rating</string>
    <string name="viewRegion">Region</string>
    <string name="viewLocalAuthority">Local Authority</string>
    <string name="viewRadius">Miles</string>
    <string name="toggleName">Search by Name</string>
    <string name="toggleLocation">Search by Location</string>
    <string name="viewSortBy">Sort By</string>
    <string name="loc_req_message">We need you location to find your nearest restaurants.</string>
</resources>
