<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/colorPrimary"
    tools:context="red.theodo.restauranthygienechecker1453831.MainActivity">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        android:textColor="@color/colorAccent"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sub_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/app_sub_title"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text" />

    <EditText
        android:id="@+id/search_text"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="70dp"
        android:ems="10"
        android:hint="@string/search_hint"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/refine_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sub_title_text" />

    <ImageButton
        android:id="@+id/refine_button"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@color/colorPrimary"
        android:elevation="0dp"
        android:padding="8dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/search_button"
        app:layout_constraintTop_toTopOf="@+id/search_text"
        app:srcCompat="@drawable/ic_settings_black_24dp" />

    <ImageButton
        android:id="@+id/search_button"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginEnd="32dp"
        android:background="@color/colorAccent"
        android:elevation="0dp"
        android:onClick="performSearch"
        android:padding="6dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/search_text"
        app:srcCompat="@drawable/ic_arrow_forward_black_24dp" />
</android.support.constraint.ConstraintLayout>
